Trying something dumb.